--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -42,7 +42,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="text"
                         android:textSize="30sp" />
 
                     <TextView
@@ -52,7 +51,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
                         android:gravity="center"
-                        android:text="text"
                         android:textSize="10sp"
                         tools:ignore="SmallSp" />
 
@@ -68,7 +66,6 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="text"
                             android:textSize="16sp" />
 
                         <ImageView
@@ -84,7 +81,6 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="text"
                             android:textSize="16sp" />
 
                     </LinearLayout>
@@ -101,7 +97,6 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="text"
                             android:textSize="20sp" />
 
                         <TextView
@@ -111,7 +106,6 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="text"
                             android:textSize="20sp" />
                     </LinearLayout>
 
@@ -128,7 +122,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="text"
                             android:textAlignment="center"
                             android:textSize="20sp" />
 
@@ -138,7 +131,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="text"
                             android:textAlignment="center"
                             android:textSize="20sp" />
                     </LinearLayout>
@@ -200,7 +192,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:nestedScrollingEnabled="false"
-                        android:orientation="horizontal" />
+                        android:orientation="horizontal"
+                        tools:itemCount="3"/>
                 </LinearLayout>
 
                 <com.github.mikephil.charting.charts.CombinedChart
@@ -218,7 +211,7 @@
                     android:nestedScrollingEnabled="false"
                     android:layout_marginTop="8dp"
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                    tools:listitem="@layout/day_item" />
+                    tools:listitem="@layout/day_item_card" />
             </LinearLayout>
 
         </androidx.core.widget.NestedScrollView>
