--- a/app/src/main/res/layout/hour_item.xml
+++ b/app/src/main/res/layout/hour_item.xml
@@ -26,6 +26,7 @@
             android:layout_columnWeight="1"
             android:layout_gravity="center"
             android:textSize="12sp"
+            android:textStyle="bold"
             tools:text="text" />
 
         <TextView
